--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
 # Core dependencies
-requests>=2.28.1
-pydantic>=2.0.0
+requests>=2.31.0
+pydantic>=2.5.2
 python-dotenv>=1.0.0
-PyYAML>=6.0
+PyYAML>=6.0.1
 
 # Notion API
 notion-client>=2.0.0
 
 # NLP and LLM integration
-litellm>=0.1.1
-transformers>=4.30.0
+litellm>=1.0.0
+transformers>=4.36.0
 sentence-transformers>=2.2.2
 
 # UI components
-PyQt6>=6.4.0
-tqdm>=4.65.0
+PyQt6>=6.6.0
+tqdm>=4.66.1
 
 # File system monitoring
 watchdog>=3.0.0
 
 # Secure storage
-keyring>=23.13.1
+keyring>=24.2.0
 
 # Async support
-aiohttp>=3.8.4
+aiohttp>=3.9.1
 asyncio>=3.4.3
 
 # Utilities
 python-dateutil>=2.8.2
-pytz>=2023.3
-rich>=13.3.5
-click>=8.1.3
+pytz>=2023.3.post1
+rich>=13.7.0
+click>=8.1.7
